(User) ChangeLog for wcet08. Please keep current.

Dez 08
---------
- 02/12/08: Do not use MessageFormat in the uppaal builder - it should only be used for UI messages
- 02/12/08: Add WcetSearch to uppaal - binary search using verifyta
- 02/12/08: Fix CallGraph.maxHeight
- 02/12/08: Fix TopOrder.findDeadNodes

- 01/12/08: Added ExecHelper for reusable parts in analyzer executables
- 01/12/08: Import UppAal translation (wcet08.uppaal.translation)
- 01/12/08: Import UppAal XML model (wcet08.uppaal.model)
- 01/12/08: Add getIterationBranchEdges() to LoopColoring

Nov 08
---------
- 30/11/08: Move some utilities from ControlFlowGraph to LoopColoring
- 30/11/08: Create graphutils.FlowGraph (directed graph with entry and exit) and move
            FlowGraph -> ControlFlowGraph, FlowGraphExport -> CFGExport,
            FlowGraphNode -> CFGNode, FlowGraphEdge -> CFGEdge etc.
- 30/11/08: Add maxHeight to callgraph nodes

- 25/11/08: Refactor Project/WcetAppInfo (close [REFACTOR_PROJECT])
- 25/11/08: Modify static reachable cache miss estimation (once again).
            We have to assume that the invoked method itself is missed not on invoke,
            but somewhere during execution of the method.
- 25/11/08: Experimental source annotation
- 25/11/08: Add IDs to flowgraphs. Preparation to support of array based graphs (for fast DFA).

- 17/11/08: Use MethodRef instead of Pair<ClassInfo,String> (better API)
- 17/11/08: Cache miss penalty:
            Encode HIDDEN_LOAD_CYCLES in WCETInstruction
            Fix bug (length of invoker)
            Fix bug (use MIN_HIDDEN_LOAD_CYCLES instead of INVOKE_HIDDEN_LOAD_CYCLES)
- 17/11/08: Java implemented bytecodes:
            Add getJavaImpl (get java implementation of bytecode) to WcetAppInfo
            Callgraph takes java implemented bytecodes into account
            [NO THROW HACK] But not for f_*throw,f_new or f_*newarray, 
                            as we don't support exceptions yet
            
